manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: weight-tracker
spec:
    ports:
    - port: 8080
    selector:
        app: weight-tracker
